--- a/footer.css
+++ b/footer.css
@@ -1,126 +1,133 @@
 .footer {
-    background: linear-gradient(91.62deg, #0A3D6B 3.71%, #3F86AE 101.65%);
+  background: linear-gradient(91.62deg, #0a3d6b 3.71%, #3f86ae 101.65%);
 }
 
 .footer .about-us p {
-    font-size: 12px !important;
+  font-size: 12px !important;
 }
 
-.footer .footer-items span {
-    font-weight: 300;
-    font-size: 12px;
-    letter-spacing: 0.29em;
-}
-
-.footer .footer-items h5 {
-    font-size: 14px;
-    line-height: 22px;
-    letter-spacing: 0.1em;
-    margin-bottom: 0;
+.footer .footer-item-logo-title span {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 10px;
+  letter-spacing: 0.09em;
 }
 
 .footer .footer-items {
-    padding-top: 25px;
+  padding-top: 25px;
 }
 
 .footer .footer-item-content p {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    text-align: justify;
-    letter-spacing: 0.05em;
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  text-align: justify;
+  letter-spacing: 0.05em;
 }
-
-
+.footer-item-logo-title .hugo-name {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 22px;
+  letter-spacing: 0.06em;
+}
 .footer .footer-item h5 {
-    line-height: 40px;
-    font-size: 18px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17.3668px;
+  line-height: 26px;
+  margin-top: 12px;
+  margin-bottom: 15px !important;
+  letter-spacing: 0.1em;
 }
 
 .footer .footer-item p {
-    font-size: 13px;
-    font-weight: 300;
-    line-height: 26px;
-    letter-spacing: 0.13em;
-    margin-bottom: 0;
+  font-family: "Montserrat";
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 26px;
+  letter-spacing: 0.13em;
+  margin-bottom: 0;
 }
 
-
 .list-inline .list-inline-item i {
-    font-size: 16px;
-    background: linear-gradient(92deg, #FC6373 1.05%, #FE9548 98.6%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: transparent;
-    
+  font-size: 16px;
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
 .list-inline .list-inline-item {
-    opacity: 0.8;
-    cursor: pointer;
+  opacity: 0.8;
+  cursor: pointer;
 }
 
 .list-inline .list-inline-item:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .list-inline .list-inline-item {
-    background-color: #fff;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
+  background-color: #fff;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
 
 .footer-language img {
-    width: 35px;
-    height: auto;
-    margin-right: 5px;
-    opacity: 0.8;
-    cursor: pointer;
+  width: 35px;
+  height: auto;
+  margin-right: 5px;
+  opacity: 0.8;
+  cursor: pointer;
 }
 
-
 .footer-copyright {
-    font-size: 12px;
-    line-height: 15px;
-    font-weight: 300;
-    color: #BFBFBF;
-    letter-spacing: 0.05rem;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 300;
+  color: #bfbfbf;
+  letter-spacing: 0.05rem;
 }
 
 .selected-lang {
-    cursor: pointer;
-    border: 2px solid #fff;
-    padding: 0 10px;
-    border-radius: 5px;
+  cursor: pointer;
+  border: 2px solid #fff;
+  padding: 0 10px;
+  border-radius: 5px;
 }
 
 .selected-lang p {
-    margin-right: 38px;
-    font-size: 14px;
+  margin-right: 38px;
+  font-size: 14px;
 }
 
 .lang-menu ul {
-    margin: 0;
-    padding: 0;
-    border: 2px solid #fff;
-    border-top: none;
-    border-radius: 5px;
-    display: none;
+  margin: 0;
+  padding: 0;
+  border: 2px solid #fff;
+  border-top: none;
+  border-radius: 5px;
+  display: none;
 }
 
 .lang-menu ul li {
-    list-style: none;
-    padding: 0 10px;
-    background-color: rgba(171, 171, 171, 0.3);
-    cursor: pointer;
+  list-style: none;
+  padding: 0 10px;
+  background-color: rgba(171, 171, 171, 0.3);
+  cursor: pointer;
 }
 
 .lang-menu ul li:hover {
-    background-color: rgba(14, 14, 48, 0.1);
+  background-color: rgba(14, 14, 48, 0.1);
 }
 
 .open-lang-selection {
-    display: block !important;
+  display: block !important;
 }
