--- a/Blogs/blogs.css
+++ b/Blogs/blogs.css
@@ -1,11 +1,11 @@
-.blog-main-pic img {
+.blog-main-pic {
   margin-top: 71px !important;
-  width: 100%;
-  overflow: hidden;
-}
-
-.view-all {
-  display: inline-block;
+  position: relative;
+  padding-top: 50%;
+  background: url(./blog-img/main-pic-blogs.png);
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .hugo-blog .container {
@@ -45,6 +45,7 @@
   background-clip: text;
   color: transparent;
   cursor: pointer;
+  display: inline-block;
 }
 
 .view-all:hover {
@@ -65,6 +66,7 @@
 .hugo-academic {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  border-bottom: 2px solid #fc6373;
 }
 
 .hugo-academic-item-pic {
@@ -138,7 +140,6 @@
 
 /* Hugo confession */
 .hugo-confession {
-  border-top: 1px solid #fc6373;
   padding-top: 87px;
 }
 
@@ -146,7 +147,136 @@
   user-select: none;
 }
 
-.hugo-confession-content .owl-item.active.center {
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
+.hugo-confession-content {
+  position: relative;
 }
+#confessionArea .owl-item {
+  height: 340px;
+  border: 2px solid #fc6373;
+  border-radius: 28px;
+  overflow: hidden;
+  position: relative;
+  padding: 30px;
+  background-color: #fff;
+}
+#confessionArea img {
+  width: 20px;
+}
+
+#confessionArea .confession-content {
+  height: 220px;
+  overflow-y: scroll;
+  margin-bottom: 0 !important;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  margin-top: 12px;
+}
+
+#confessionArea .confession-content::-webkit-scrollbar {
+  display: none;
+}
+#confessionArea .cfs-number {
+  font-family: "Montserrat";
+  font-style: italic;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 2px;
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  margin-top: 20px;
+  margin-bottom: 0 !important;
+}
+
+#confessionArea .owl-prev {
+  position: absolute;
+  left: 100px;
+}
+#confessionArea .owl-next {
+  position: absolute;
+  right: 100px;
+}
+
+.hugo-confession-content .owl-item {
+  transform: scale(0.8);
+  transition: all 0.5s;
+  filter: blur(4px);
+  max-width: 500px !important;
+}
+
+.hugo-confession-content .owl-stage {
+  padding: 40px 0;
+}
+
+.hugo-confession-content .owl-item.active.center {
+  transform: scale(1.1);
+  transition: all 0.25s;
+  filter: blur(0px);
+  position: relative;
+  z-index: 1;
+}
+/* #confessionArea .item {
+  height: 400px;
+  border: 4px solid #fe9548;
+  border-radius: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow: hidden;
+}
+.confession-author {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 0.01em;
+  margin-bottom: 0px !important;
+}
+
+.confession-title {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.01em;
+  margin-bottom: 0px !important;
+}
+
+.confession-introduction {
+  overflow: hidden;
+  margin: 0 30px;
+  text-align: justify;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 19px;
+  letter-spacing: 0.02em;
+  height: 60px;
+  overflow: hidden;
+}
+
+#confessionArea .item img {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  border: 4px solid #fe9548;
+  margin: 20px 20px 0px 20px;
+} */
