--- a/blogs.css
+++ b/blogs.css
@@ -16,7 +16,7 @@
   height: 42px;
   border-radius: 50% !important;
   color: #fe9548 !important;
-  background: rgba(255, 255, 255, 0.4) !important;
+  background: rgba(255, 255, 255, 0.8) !important;
 }
 
 .owl-next:hover,
@@ -90,7 +90,11 @@
 }
 
 .card-blog {
-  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.card-blog:hover {
+  border: 1px solid #fe9548;
 }
 
 .card-body h5 {
