--- a/team_meeting/team_meeting.css
+++ b/team_meeting/team_meeting.css
@@ -8,7 +8,11 @@
 #header-pic {
   position: relative;
   padding-top: 50%;
-  background: url(../imgs/team_meeting/poster.jpg) top center / cover no-repeat;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 60%, #121212 95%),
+    url(../imgs/team_meeting/poster.jpg);
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .team-text-content {
