--- a/teams_introduce.css
+++ b/teams_introduce.css
@@ -161,7 +161,7 @@ html {
 
 .teams-introduce-text p {
   font-family: "Crimson Pro";
-  font-style: normal;
+  font-style: italic;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
