--- a/activities.css
+++ b/activities.css
@@ -141,7 +141,6 @@
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0.03em;
-  /* transform: translateY(30px); */
   transition: all 0.5s;
 }
 
@@ -151,7 +150,7 @@
 }
 
 .activities .item .item-activities-text .item-activities-text-sub {
-  font-family: "Lato";
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 500;
   font-size: 10px;
@@ -161,6 +160,13 @@
   visibility: hidden;
   opacity: 0;
   transition: all 0.4s;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  height: 34px;
+  margin-bottom: 4px !important;
 }
 
 .activities .item:hover .item-activities-text .item-activities-text-sub {
