--- a/footer.css
+++ b/footer.css
@@ -26,6 +26,7 @@
   line-height: 20px;
   text-align: justify;
   letter-spacing: 0.05em;
+  padding-right: 0 !important;
 }
 .footer-item-logo-title .hugo-name {
   font-family: "Montserrat";
